feat: add controlled music releases
